--- a/app/style/scss/_animate.scss
+++ b/app/style/scss/_animate.scss
@@ -39,60 +39,79 @@
         transform: translate(0px, 7px)
     }
 }
-@keyframes success {
-    0%{
-        right: -150px;
-        opacity: 0;
-    }
-    100%{
-        right: 0px;
-        opacity: 1;
-    }
-}
-
 
 //animate classes
 
 #balkon{
 	background-image: url("../../img/bg_3.png");
+	height: 100%;
 	background-repeat: no-repeat;
 	background-size: cover;
 	transform: scale(1.04);
 	background-position: center center;
 	animation: balkon 6s linear forwards;
+	@include md{
+		animation: none;
+		transform: scale(1.0);
+		background-position-y: 199px;
+		background-position-x: 51%;
+		background-size: 215%;
+
+	}
 }
 
 #fly_car{
 	position: absolute;
-	transform: translate(-7%, 87%);
+	transform: translate(-7%, 86%);
 	@include md{
-		transform: translate(-30%, 60%);
+		transform: translate(-32%, 146%) scale(0.9)
 	} 
+	@include lg{
+		transform: translate(-20%, 50%) scale(0.7);
+	}
 
 }
 
 .ball_1{
 	animation: Ball 2s linear forwards infinite;
+	@include md{
+		transform: translate(-89%, 238%) scale(0.6);
+	}
 }
 .ball_2{
 	animation: Ball 2.5s linear forwards infinite;
 	animation-delay: 0.5s;
+	@include md{
+		transform: translate(-93%, 243%) scale(0.6)
+	}
 }
 .ball_3{
 	animation: Ball 1.7s linear forwards infinite;
 	animation-delay: 0s;
+	@include md{
+		transform: translate(-160%, 268%) scale(0.6)
+	}
 }
 .ball_4{
 	animation: Ball 2.5s linear forwards infinite;
 	animation-delay: 0.5s;
+	@include md{
+		transform: translate(-93%, 243%) scale(0.6)
+	}
 }
 .ball_4{
 	animation: Ball 2.5s linear forwards infinite;
 	animation-delay: 0s;
+	@include md{
+		transform: translate(-351%, 459%) scale(0.6)
+	}
 }
 .ball_5{
 	animation: Ball 2.5s linear forwards infinite;
 	animation-delay: 0.5s;
+	@include md{
+		transform: translate(-800%, 973%) scale(0.8);
+	}
 }
 #earth_1_img{
 
@@ -100,7 +119,8 @@
 	top: -10%;
 	animation: animatedBackground 7.0s linear forwards;
 	@include md{
-		top: 0;
+		animation: none;
+		transform: translate(0%, 120%) scale(2);
 	}
 }
 .earth_1{
