--- a/app/style/scss/_sect_six.scss
+++ b/app/style/scss/_sect_six.scss
@@ -1,9 +1,92 @@
 .sect_six{
-	background: url('../../img/sect_six_bg.jpg');
+	background: url('../../img/sect_six_bg.jpg') no-repeat;
 	position: center center;
 	overflow: hidden;
 	.sect_six_cont{
 		margin-top: 100px;
 		position: relative;
+		.point_hex{
+			position: relative;
+  			width: 300px; 
+  			height: 173.21px;
+  			background-color: #000000ab;
+  			margin: 86.60px 0;
+		}
+		.point_hex:before,
+		.point_hex:after {
+		  content: "";
+		  position: absolute;
+		  width: 0;
+		  margin-left: -50%;
+		  border-left: 150px solid transparent;
+		  border-right: 150px solid transparent;
+		}
+
+		.point_hex:before {
+		  bottom: 100%;
+		  border-bottom: 86.60px solid #000000ab;
+		}
+
+		.point_hex:after {
+		  top: 100%;
+		  width: 0;
+		  border-top: 86.60px solid #000000ab;
+		}
+
+		.point{
+			color: $white;
+			text-align: center;
+			position: relative;
+			.hex_socials{
+				display: flex;
+				.social_icon{
+					margin-top: -7px;
+					font-size: 16px;
+					color: $white;
+					margin-left: 7px;
+					&:hover{
+					color: $orange;
+			}	
+				}
+
+			}
+			.point_img{
+				position: absolute;
+				bottom: 29%;
+				left: 46%;
+			}
+		}
+
+		.hexagon{
+			&:before, &:after{
+				margin-left: 0;
+			}
+		}
+		.hex_1{
+			margin-top: 8%;
+			margin-left: 35px;
+			margin-right: 60px;
+			color: $white;
+
+			.t_hex_info{
+				@extend %USHText;
+				color: $white;
+				font-size: 0.875em;
+				margin-top: -5px;
+				@include paddingLR(66px, 66px);
+				text-align: center;
+				.hex_title{
+					font-size: 1.5em;
+					margin-bottom: 40px;
+				}
+			}
+			.sect_six_btn{
+				z-index: 10;
+   				position: absolute;
+    			overflow: visible;
+				transform: translate(227%, 37%);
+				backgroung: none;
+			}
+		}
 	}
 }
