--- a/app/style/css/style.css
+++ b/app/style/css/style.css
@@ -86,10 +86,11 @@ a {
   height: 249.42px;
   background-color: #000000ab;
   margin: 115.47px 0; }
-  @media (min-width: 576px) and (max-width: 767px) {
+  @media (min-width: 768px) and (max-width: 991px) {
     .hexagon {
-      width: 325px;
-      height: 187.75px; } }
+      width: 301px;
+      height: 187.75px;
+      margin: 86.60px 0; } }
 
 .hexagon:before,
 .hexagon:after {
@@ -99,20 +100,26 @@ a {
   border-left: 216px solid transparent;
   border-right: 216px solid transparent;
   margin-left: -50%; }
-  @media (min-width: 576px) and (max-width: 767px) {
+  @media (min-width: 768px) and (max-width: 991px) {
     .hexagon:before,
     .hexagon:after {
-      border-left: 162px solid transparent;
-      border-right: 162px solid transparent; } }
+      border-left: 150px solid transparent;
+      border-right: 150px solid transparent; } }
 
 .hexagon:before {
   bottom: 100%;
   border-bottom: 115.47px solid #000000ab; }
+  @media (min-width: 768px) and (max-width: 991px) {
+    .hexagon:before {
+      border-bottom: 86.60px solid #000000ab; } }
 
 .hexagon:after {
   top: 100%;
   margin-left: -50%;
   border-top: 115.47px solid #000000ab; }
+  @media (min-width: 768px) and (max-width: 991px) {
+    .hexagon:after {
+      border-top: 86.60px solid #000000ab; } }
 
 .main_nav {
   position: absolute;
@@ -120,8 +127,8 @@ a {
   right: 8%; }
   @media (min-width: 768px) and (max-width: 991px) {
     .main_nav {
-      top: 57%;
-      right: 2%; } }
+      top: 68%;
+      right: 3%; } }
   .main_nav .main_nav_list {
     list-style: none;
     display: -webkit-box;
@@ -373,7 +380,7 @@ a {
     font-size: 1.612em; }
     @media (min-width: 768px) and (max-width: 991px) {
       .main_sect .main_sect_container .main_tittle {
-        margin-top: 32%;
+        margin-top: 27%;
         margin-left: 388px;
         font-size: 1.86em; } }
   .main_sect .main_sect_container .info_about {
@@ -488,16 +495,16 @@ a {
       -webkit-transform: scale(1);
           -ms-transform: scale(1);
               transform: scale(1);
-      background-position-y: 199px;
+      background-position-y: 158px;
       background-position-x: 51%;
       -webkit-background-size: 215% 215%;
               background-size: 215%; } }
 
 #fly_car {
   position: absolute;
-  -webkit-transform: translate(-7%, 86%);
-      -ms-transform: translate(-7%, 86%);
-          transform: translate(-7%, 86%); }
+  -webkit-transform: translate(-7%, 101%);
+      -ms-transform: translate(-7%, 101%);
+          transform: translate(-7%, 101%); }
   @media (min-width: 768px) and (max-width: 991px) {
     #fly_car {
       -webkit-transform: translate(-32%, 146%) scale(0.9);
@@ -514,9 +521,9 @@ a {
           animation: Ball 2s linear forwards infinite; }
   @media (min-width: 768px) and (max-width: 991px) {
     .ball_1 {
-      -webkit-transform: translate(-89%, 238%) scale(0.6);
-          -ms-transform: translate(-89%, 238%) scale(0.6);
-              transform: translate(-89%, 238%) scale(0.6); } }
+      -webkit-transform: translate(-89%, 213%) scale(0.6);
+          -ms-transform: translate(-89%, 213%) scale(0.6);
+              transform: translate(-89%, 213%) scale(0.6); } }
 
 .ball_2 {
   -webkit-animation: Ball 2.5s linear forwards infinite;
@@ -525,9 +532,9 @@ a {
           animation-delay: 0.5s; }
   @media (min-width: 768px) and (max-width: 991px) {
     .ball_2 {
-      -webkit-transform: translate(-93%, 243%) scale(0.6);
-          -ms-transform: translate(-93%, 243%) scale(0.6);
-              transform: translate(-93%, 243%) scale(0.6); } }
+      -webkit-transform: translate(-93%, 217%) scale(0.6);
+          -ms-transform: translate(-93%, 217%) scale(0.6);
+              transform: translate(-93%, 217%) scale(0.6); } }
 
 .ball_3 {
   -webkit-animation: Ball 1.7s linear forwards infinite;
@@ -536,9 +543,9 @@ a {
           animation-delay: 0s; }
   @media (min-width: 768px) and (max-width: 991px) {
     .ball_3 {
-      -webkit-transform: translate(-160%, 268%) scale(0.6);
-          -ms-transform: translate(-160%, 268%) scale(0.6);
-              transform: translate(-160%, 268%) scale(0.6); } }
+      -webkit-transform: translate(-161%, 238%) scale(0.6);
+          -ms-transform: translate(-161%, 238%) scale(0.6);
+              transform: translate(-161%, 238%) scale(0.6); } }
 
 .ball_4 {
   -webkit-animation: Ball 2.5s linear forwards infinite;
