--- a/app/style/css/style.css
+++ b/app/style/css/style.css
@@ -26,10 +26,6 @@
 html {
   font-size: 16px; }
 
-@media (min-width: 1200px) {
-  .container {
-    width: 1264px; } }
-
 a {
   color: #ffffff; }
   a:hover {
@@ -44,14 +40,32 @@ a {
   position: absolute;
   font-size: 0.875em;
   bottom: 24px;
-  left: 47%; }
+  left: 47%;
+  -webkit-transition: all .5s ease-in-out;
+  -o-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out; }
+  .scroll_down .anime {
+    -webkit-animation: MouseOn 2s ease-in-out forwards infinite;
+            animation: MouseOn 2s ease-in-out forwards infinite; }
+    .scroll_down .anime:hover {
+      -webkit-animation: none;
+              animation: none;
+      bottom: 30px; }
   .scroll_down p {
     text-align: center; }
+  @media (min-width: 768px) and (max-width: 991px) {
+    .scroll_down {
+      bottom: -22%;
+      left: 47%; } }
 
 .join_us {
   position: absolute;
-  bottom: 4%;
-  right: 8%; }
+  bottom: 5%;
+  right: 7%; }
+  @media (min-width: 768px) and (max-width: 991px) {
+    .join_us {
+      bottom: -21%;
+      right: 3%; } }
 
 .info_btn {
   width: 146px;
@@ -88,9 +102,9 @@ a {
   margin: 115.47px 0; }
   @media (min-width: 768px) and (max-width: 991px) {
     .hexagon {
-      width: 301px;
-      height: 187.75px;
-      margin: 86.60px 0; } }
+      width: 325px;
+      height: 187.64px;
+      margin: 93.82px 0; } }
 
 .hexagon:before,
 .hexagon:after {
@@ -103,15 +117,15 @@ a {
   @media (min-width: 768px) and (max-width: 991px) {
     .hexagon:before,
     .hexagon:after {
-      border-left: 150px solid transparent;
-      border-right: 150px solid transparent; } }
+      border-left: 162.5px solid transparent;
+      border-right: 162.5px solid transparent; } }
 
 .hexagon:before {
   bottom: 100%;
   border-bottom: 115.47px solid #000000ab; }
   @media (min-width: 768px) and (max-width: 991px) {
     .hexagon:before {
-      border-bottom: 86.60px solid #000000ab; } }
+      border-bottom: 93.82px solid #000000ab; } }
 
 .hexagon:after {
   top: 100%;
@@ -119,15 +133,15 @@ a {
   border-top: 115.47px solid #000000ab; }
   @media (min-width: 768px) and (max-width: 991px) {
     .hexagon:after {
-      border-top: 86.60px solid #000000ab; } }
+      border-top: 93.82px solid #000000ab; } }
 
 .main_nav {
   position: absolute;
-  top: 47%;
+  top: 46%;
   right: 8%; }
   @media (min-width: 768px) and (max-width: 991px) {
     .main_nav {
-      top: 68%;
+      top: 56%;
       right: 3%; } }
   .main_nav .main_nav_list {
     list-style: none;
@@ -264,6 +278,11 @@ a {
   .header .logo_container {
     margin-top: 36px;
     margin-bottom: 41px; }
+    @media (min-width: 768px) and (max-width: 991px) {
+      .header .logo_container {
+        -webkit-transform: translate(-26%, 15%);
+            -ms-transform: translate(-26%, 15%);
+                transform: translate(-26%, 15%); } }
   .header .nav {
     display: -webkit-box;
     display: -webkit-flex;
@@ -275,6 +294,11 @@ a {
             align-items: center; }
     .header .nav .hamburder_icon {
       position: absolute; }
+      @media (min-width: 768px) and (max-width: 991px) {
+        .header .nav .hamburder_icon {
+          -webkit-transform: translate(7%, 7%);
+              -ms-transform: translate(7%, 7%);
+                  transform: translate(7%, 7%); } }
     .header .nav .nav_item {
       z-index: 1;
       display: inline-block;
@@ -355,6 +379,9 @@ a {
         -ms-flex-align: end;
             align-items: flex-end;
     list-style: none; }
+    @media (min-width: 768px) and (max-width: 991px) {
+      .main_sect .main_sect_container .ball_con {
+        margin-top: -100px; } }
     .main_sect .main_sect_container .ball_con .ball {
       margin-left: 12px; }
       @media (min-width: 768px) and (max-width: 991px) {
@@ -375,7 +402,7 @@ a {
       margin-bottom: -229px;
       margin-left: -2px; }
   .main_sect .main_sect_container .main_tittle {
-    margin-top: 30%;
+    margin-top: 23%;
     margin-left: 76px;
     font-size: 1.612em; }
     @media (min-width: 768px) and (max-width: 991px) {
@@ -386,39 +413,54 @@ a {
   .main_sect .main_sect_container .info_about {
     margin-left: 93px;
     margin-bottom: 188px;
-    margin-top: 108px;
+    margin-top: 129px;
     padding-left: 66px;
     padding-right: 66px;
     font-size: 0.875em;
     text-align: center;
     background-color: #000000ab; }
+    @media (min-width: 768px) and (max-width: 991px) {
+      .main_sect .main_sect_container .info_about {
+        -webkit-transform: translate(-24%, 129%);
+            -ms-transform: translate(-24%, 129%);
+                transform: translate(-24%, 129%);
+        padding-left: 15px;
+        padding-right: 15px; } }
     .main_sect .main_sect_container .info_about .info_tittle {
       margin-bottom: 45px;
-      font-size: 1.875em;
-      -webkit-animation-delay: 10s;
-              animation-delay: 10s; }
+      font-size: 1.875em; }
+      @media (min-width: 768px) and (max-width: 991px) {
+        .main_sect .main_sect_container .info_about .info_tittle {
+          margin-bottom: 15px;
+          font-size: 1.9em; } }
     .main_sect .main_sect_container .info_about .info_about_text {
       height: 140px;
       overflow-x: hidden;
       overflow-y: scroll; }
+      @media (min-width: 768px) and (max-width: 991px) {
+        .main_sect .main_sect_container .info_about .info_about_text {
+          height: 110px; } }
     .main_sect .main_sect_container .info_about .info_about_text::-webkit-scrollbar {
       width: 0px; }
+    @media (min-width: 768px) and (max-width: 991px) {
+      .main_sect .main_sect_container .info_about .info_btn {
+        margin: -16px 79px; } }
 
 @-webkit-keyframes animatedBackground {
   0 {
-    -webkit-transform: translate(-750px, 0px);
-            transform: translate(-750px, 0px); }
+    -webkit-transform: translate(-550px, 0px);
+            transform: translate(-550px, 0px); }
   100% {
-    -webkit-transform: translate(0px, -60px);
-            transform: translate(0px, -60px); } }
+    -webkit-transform: translate(0px, -160px);
+            transform: translate(0px, -160px); } }
 
 @keyframes animatedBackground {
   0 {
-    -webkit-transform: translate(-750px, 0px);
-            transform: translate(-750px, 0px); }
+    -webkit-transform: translate(-550px, 0px);
+            transform: translate(-550px, 0px); }
   100% {
-    -webkit-transform: translate(0px, -60px);
-            transform: translate(0px, -60px); } }
+    -webkit-transform: translate(0px, -160px);
+            transform: translate(0px, -160px); } }
 
 @-webkit-keyframes balkon {
   0 {
@@ -476,6 +518,28 @@ a {
     -webkit-transform: translate(0px, 7px);
             transform: translate(0px, 7px); } }
 
+@-webkit-keyframes MouseOn {
+  0 {
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px); }
+  50% {
+    -webkit-transform: translate(0px, -11px);
+            transform: translate(0px, -11px); }
+  100% {
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px); } }
+
+@keyframes MouseOn {
+  0 {
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px); }
+  50% {
+    -webkit-transform: translate(0px, -11px);
+            transform: translate(0px, -11px); }
+  100% {
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px); } }
+
 #balkon {
   background-image: url("../../img/bg_3.png");
   height: 100%;
@@ -485,7 +549,7 @@ a {
   -webkit-transform: scale(1.04);
       -ms-transform: scale(1.04);
           transform: scale(1.04);
-  background-position: center center;
+  background-position-y: 78%;
   -webkit-animation: balkon 6s linear forwards;
           animation: balkon 6s linear forwards; }
   @media (min-width: 768px) and (max-width: 991px) {
@@ -495,21 +559,21 @@ a {
       -webkit-transform: scale(1);
           -ms-transform: scale(1);
               transform: scale(1);
-      background-position-y: 158px;
+      background-position-y: -143px;
       background-position-x: 51%;
       -webkit-background-size: 215% 215%;
               background-size: 215%; } }
 
 #fly_car {
   position: absolute;
-  -webkit-transform: translate(-7%, 101%);
-      -ms-transform: translate(-7%, 101%);
-          transform: translate(-7%, 101%); }
+  -webkit-transform: translate(-7%, 78%);
+      -ms-transform: translate(-7%, 78%);
+          transform: translate(-7%, 78%); }
   @media (min-width: 768px) and (max-width: 991px) {
     #fly_car {
-      -webkit-transform: translate(-32%, 146%) scale(0.9);
-          -ms-transform: translate(-32%, 146%) scale(0.9);
-              transform: translate(-32%, 146%) scale(0.9); } }
+      -webkit-transform: translate(-31%, 79%) scale(0.8);
+          -ms-transform: translate(-31%, 79%) scale(0.8);
+              transform: translate(-31%, 79%) scale(0.8); } }
   @media (min-width: 992px) and (max-width: 1199px) {
     #fly_car {
       -webkit-transform: translate(-20%, 50%) scale(0.7);
@@ -565,9 +629,9 @@ a {
           animation-delay: 0s; }
   @media (min-width: 768px) and (max-width: 991px) {
     .ball_4 {
-      -webkit-transform: translate(-351%, 459%) scale(0.6);
-          -ms-transform: translate(-351%, 459%) scale(0.6);
-              transform: translate(-351%, 459%) scale(0.6); } }
+      -webkit-transform: translate(-361%, 395%) scale(0.6);
+          -ms-transform: translate(-361%, 395%) scale(0.6);
+              transform: translate(-361%, 395%) scale(0.6); } }
 
 .ball_5 {
   -webkit-animation: Ball 2.5s linear forwards infinite;
@@ -578,7 +642,10 @@ a {
     .ball_5 {
       -webkit-transform: translate(-800%, 973%) scale(0.8);
           -ms-transform: translate(-800%, 973%) scale(0.8);
-              transform: translate(-800%, 973%) scale(0.8); } }
+              transform: translate(-800%, 973%) scale(0.8);
+      -webkit-transform: translate(-813%, 823%) scale(0.8);
+          -ms-transform: translate(-813%, 823%) scale(0.8);
+              transform: translate(-813%, 823%) scale(0.8); } }
 
 #earth_1_img {
   width: 100%;
@@ -589,13 +656,23 @@ a {
     #earth_1_img {
       -webkit-animation: none;
               animation: none;
-      -webkit-transform: translate(0%, 120%) scale(2);
-          -ms-transform: translate(0%, 120%) scale(2);
-              transform: translate(0%, 120%) scale(2); } }
+      -webkit-transform: translate(-13%, 30%) scale(2);
+          -ms-transform: translate(-13%, 30%) scale(2);
+              transform: translate(-13%, 30%) scale(2); } }
 
 .earth_1 {
   position: absolute;
   z-index: -1; }
+  @media (min-width: 1200px) and (max-width: 1600px) {
+    .earth_1 {
+      -webkit-transform: translate(0%, 34%);
+          -ms-transform: translate(0%, 34%);
+              transform: translate(0%, 34%); } }
+  @media (min-width: 992px) and (max-width: 1199px) {
+    .earth_1 {
+      -webkit-transform: translate(0%, 54%);
+          -ms-transform: translate(0%, 54%);
+              transform: translate(0%, 54%); } }
 
 .sect_two {
   background-image: url("../../img/sect_two_bg.jpg");
