--- a/app/style/scss/_main.scss
+++ b/app/style/scss/_main.scss
@@ -5,6 +5,7 @@
 	position: fixed;
     z-index: 100;
     width: 100%;
+
 	.header_cont{
 		overflow: hidden;
 		@include md{
@@ -14,13 +15,19 @@
 
 	.logo_container{
 		@include marginTB(36px, 41px);
+		@include md{
+			transform: translate(-26%, 15%);
+		}
 	}
 	
 	.nav{
 		display: flex;
     	align-items: center;
 		.hamburder_icon{
-			position: absolute; 	
+			position: absolute; 
+			@include md{
+				transform: translate(7%, 7%);
+			}		
 		}
 		
 		.nav_item{
@@ -106,7 +113,7 @@
     		align-items: flex-end;
 			list-style: none;
 			@include md{
-
+				margin-top: -100px;
 			}
 			.ball{
 				margin-left: 12px;
@@ -141,7 +148,7 @@
 		@extend %USHText;
 		color: $white;
 		.main_tittle{
-			margin-top: 30%;
+			margin-top: 23%;
    			margin-left: 76px;
 			font-size: 1.612em;
 			@include md{
@@ -153,24 +160,41 @@
 		.info_about{
 			margin-left: 93px;
    			margin-bottom: 188px;
-    		margin-top: 108px;
+   			margin-top: 129px;
 			@include paddingLR(66px, 66px);
 			font-size: 0.875em;
 			text-align: center;
 			background-color: #000000ab;
+				@include md{
+					transform: translate(-24%, 129%);
+					@include paddingLR(15px, 15px);
+				}
 
 			.info_tittle{
 				margin-bottom: 45px;
 				font-size: 1.875em;
-				animation-delay: 10s;
+				@include md{
+					margin-bottom: 15px;
+					font-size: 1.9em;
+				}
+
+
 			}
 			.info_about_text{
 				height: 140px;
 				overflow-x: hidden;
     			overflow-y: scroll;
+    			@include md{
+    				height: 110px;
+    			}
 
 			}
 			.info_about_text::-webkit-scrollbar {width:0px;}
+			.info_btn{
+				@include md{
+					margin: -16px 79px;
+				}
+			}
 		}
 	}
 }
